src/renderer/src/styles/layout/main/_sidebar.sass
/*
 * ========================================================
 * layout/main/sidebar
 * ========================================================
 */

// 1. Fix vertical whitespace caused by inline-* display.
// 2. Add breathing space for ::selection rectangle.
// 2.1 - Revert padding.

.sidebar
  grid-area: sidebar
  display: flex
  flex-direction: column

  &__actions
    height: 29px
    padding: 0 (8px - 6) 0 (8px + 15 + 8)
    flex-shrink: 0
    display: flex
    justify-content: flex-end
    align-items: flex-start

  &__button
    color: var(--color-sidebar-button)
    padding: 6px
    display: inline-flex
    align-items: center
    vertical-align: top // [1]

    &:not(:disabled):active
      color: var(--color-sidebar-button-pressed)

    &:disabled
      opacity: .5

    &-icon
      width: 11px
      height: 11px

  &__list
    flex-grow: 1
    overflow-y: auto

  &__item
    $element: &

    font-size: 11px
    letter-spacing: 0.05px
    display: flex
    align-items: center
    padding: 5px 8px
    width: calc(100% - .5px)
    position: relative
    text-align: left

    .window-blurred &
      @media (prefers-color-scheme: dark)
        --color-icon-solid-dark: var(--color-icon-solid-dark-blurred)
        --color-icon-translucent-dark: var(--color-icon-translucent-dark-blurred)

    &--active
      --color-icon-solid-light: var(--color-icon-solid-light-active)
      --color-icon-translucent-light: var(--color-icon-translucent-light-active)
      --color-icon-solid-dark: var(--color-icon-solid-dark-active)
      --color-icon-translucent-dark: var(--color-icon-translucent-dark-active)

      .window-blurred &
        @media (prefers-color-scheme: dark)
          --color-icon-solid-dark: var(--color-icon-solid-dark-blurred-active)
          --color-icon-translucent-dark: var(--color-icon-translucent-dark-blurred-active)

      &::after
        content: ''
        background: rgba(#000, .15) // TODO:
        position: absolute
        top: 0
        right: 0
        bottom: 0
        left: 0
        z-index: -1
        transform: translateX(-.5px)

        @media (prefers-color-scheme: dark)
          background: rgba(#fff, .18) // TODO:

    &-icon
      border-radius: 4px
      width: 15px
      height: 15px
      margin-right: 8px
      flex-shrink: 0

    &-name
      max-width: 100%
      margin: 0 -1px // [2.1]
      padding: 1px // [2]
      overflow: hidden
      white-space: nowrap
      flex-grow: 1

      &[contenteditable]
        outline: 0
        background: var(--color-sidebar-input-background)

      &:not([contenteditable])
        text-overflow: ellipsis

    &-data
      width: 15px
      height: 15px
      flex-shrink: 0
      display: flex
      justify-content: center
      align-items: center

      #{$element}:not(:hover):not(#{$element}--active) &:not(#{&}--active)
        display: none

      &-icon
        fill: rgba(#7B7B7B, .25)
        stroke: #7B7B7B
          width: .75px
        width: 11px
        height: 11px

